auth for cms with strong

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Very micro cms with micro framework slim, uses key-values storage",
     "require": {
         "slim/slim": "2.2.0",
-        "jwest/strong": "v1"
+        "slim/strong": "dev-master"
     },
     "authors": [
         {
